added ec2 to yaml

--- a/cloudformationtemplate.yaml
+++ b/cloudformationtemplate.yaml
@@ -1,6 +1,16 @@
 AWSTemplateFormatVersion: 2010-09-09
 Description: Academy Demo CloudFormation
 
+Parameters:
+  LatestAmiId:
+    Type: 'AWS::SSM::Parameter::Value<AWS::EC2::Image::Id>'
+    Default: '/aws/service/ami-amazon-linux-latest/amzn2-ami-hvm-x86_64-gp2'
+  InstanceTypeParameter:
+    Type: String
+    Default: t2.micro
+    AllowedValues:
+      - t2.micro
+
 Resources:
   RobinCloudBucket:
     Type: AWS::S3::Bucket
@@ -9,3 +19,10 @@ Resources:
     Type: AWS::SQS::Queue
     Properties:
       QueueName: RobinSQSQueue
+
+  RobinEC2instance:
+    Type: AWS::EC2::Instance
+    Properties:
+      ImageId: !Ref LatestAmiId
+      InstanceType:
+        Ref: InstanceTypeParameter
